@@ -7,6 +7,10 @@
 Don't mark widget documentation as translatable.
 Make sure the tooltip for pinboard and panel icons is up-to-date (reported
 by krjw).
+Use pinboard backdrop colour for scaled and centred images (requested by
+Marcelo Ramos).
+Shade the backdrop style buttons when an external program is being used to
+set the backdrop.
 
 08-Mar-2003
 ~~~~~~~~~~~
